# jgcoins

./: COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  jgcoin-qt.pro  jgcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-qt.protocol  bitcoind.bash-completion  bitcoind.examples  bitcoind.install  changelog  control  copyright  jgcoin-qt.install  jgcoin-qt.lintian-overrides  jgcoind.lintian-overrides  jgcoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/jgcrpc/: README.md  jgcrpc.py
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-bitcoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin32.xpm  bitcoin64.xpm  jgcoin256.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoind-res.rc  bitcoind.cpp  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  (+48 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  jgcoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  jgcoingui.cpp  jgcoinunits.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  (+58 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_ca@valencia.ts  bitcoin_cy.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_ja.ts  bitcoin_ky.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_ms_MY.ts  bitcoin_pam.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  bitcoin_sah.ts  bitcoin_sl_SI.ts  bitcoin_sr.ts  bitcoin_sv.ts  bitcoin_th_TH.ts  bitcoin_tr.ts  bitcoin_ur_PK.ts  bitcoin_zh_HK.ts  bitcoin_zh_TW.ts  jgcoin_ach.ts  jgcoin_bg.ts  jgcoin_bs.ts  jgcoin_ca.ts  jgcoin_ca_ES.ts  (+30 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: jgcoin.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  uint256_tests.cpp  (+2 more)
(+6 files in other folders)
